--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,7 +14,7 @@ email-validator==2.3.0
 fastapi==0.120.4
 google-api-core==2.28.1
 google-api-python-client==2.187.0
-google-auth==2.45.0
+google-auth
 google-auth-httplib2==0.2.1
 google-auth-oauthlib==1.2.3
 google-genai==1.56.0
