--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,7 @@ google-api-python-client
 google-auth
 google-auth-httplib2==0.2.1
 google-auth-oauthlib==1.2.3
-google-genai==1.56.0
+google-genai
 googleapis-common-protos==1.72.0
 groq==0.37.1
 h11==0.16.0
